<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center"

    android:layout_gravity="center"
    android:background="@drawable/background3"
    >

    <TextView
        android:id="@+id/textView2"
        android:padding="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text= "@string/contractor"
        android:textSize="35sp"
        android:textColor="#0F0E0E"
        android:textStyle="bold"
        android:fontFamily="sans-serif-black"/>

    <EditText
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:background="#B7BABA"
        android:hint="@string/editeText1Hint"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginBottom="20dp">

    </EditText>

    <EditText
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:hint="@string/editText2Hint"
        android:textAlignment="center"
        android:textStyle="bold"
        android:background="#B7BABA"
        android:layout_marginBottom="20dp">

    </EditText>
    <Button
        android:id="@+id/signinbtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#45d4d6"
        android:text="@string/signin"
        android:textStyle="bold"
        android:layout_margin="10dp"
        android:textColor="@color/black"/>


    <Button
        android:id="@+id/registerBtn"
        android:textStyle="bold"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:backgroundTint="#45d4d6"
        android:text="@string/googleSign"
        android:textColor="@color/black" />

    <EditText
        android:layout_width="166dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="-20dp"
        android:ems="13"
        android:textStyle="bold"
        android:inputType="text"
        android:text="@string/haveaccount"
        android:textSize="10sp" />


</LinearLayout>