<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_gravity="center"
    android:background="@drawable/background3">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:fontFamily="sans-serif-black"
        android:padding="50dp"
        android:text="@string/thirdButton"
        android:textColor="#0F0E0E"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/name"
        android:layout_width="169dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:background="#B7BABA"
        android:hint="@string/fullname"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

    </EditText>

    <EditText
        android:id="@+id/dob"
        android:layout_width="169dp"
        android:layout_height="48dp"
        android:layout_marginStart="224dp"
        android:layout_marginTop="40dp"
        android:background="#B7BABA"
        android:hint="Birthdate(DD/MM/YY)"
        android:inputType="date"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

    </EditText>

    <EditText
        android:id="@+id/emailAddress"
        android:layout_width="169dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:background="#B7BABA"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name">

    </EditText>

    <EditText
        android:id="@+id/confirmemail"
        android:layout_width="169dp"
        android:layout_height="48dp"
        android:layout_marginStart="220dp"
        android:layout_marginTop="28dp"
        android:background="#B7BABA"
        android:hint="Confirm email address"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name">

    </EditText>

    <EditText

        android:id="@+id/password"
        android:layout_width="169dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:background="#B7BABA"
        android:hint="@string/editText2Hint"
        android:textAlignment="center"
        android:inputType="textPassword"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailAddress">

    </EditText>

    <EditText

        android:id="@+id/confirmpassword"
        android:layout_width="169dp"
        android:layout_height="48dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="32dp"
        android:background="#B7BABA"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/confirmemail">

    </EditText>

    <Button
        android:id="@+id/registerBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"

        android:layout_marginTop="4dp"
        android:backgroundTint="#45d4d6"
        android:text="@string/register"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone" />

    <TextView
        android:id="@+id/signin"
        android:layout_width="166dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:ems="13"
        android:inputType="text"
        android:text="@string/haveaccount"
        android:textColor="@color/white"
        android:textSize="10sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerBtn" />

    <EditText
        android:id="@+id/address"
        android:layout_width="169dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:background="#B7BABA"
        android:ems="10"
        android:hint="     Address"
        android:inputType="text"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <EditText
        android:id="@+id/city"
        android:layout_width="169dp"
        android:layout_height="48dp"
        android:layout_marginStart="220dp"
        android:layout_marginTop="32dp"
        android:background="#B7BABA"
        android:ems="10"
        android:hint="     City/Town"
        android:inputType="text"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <EditText
        android:id="@+id/postal"
        android:layout_width="169dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:background="#B7BABA"
        android:ems="10"
        android:hint="  Postal Code"
        android:inputType="text"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/address" />

    <EditText
        android:id="@+id/province"
        android:layout_width="169dp"
        android:layout_height="48dp"
        android:layout_marginStart="220dp"
        android:layout_marginTop="32dp"
        android:background="#B7BABA"
        android:ems="10"
        android:hint="  Province"
        android:inputType="text"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/address" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="22dp"
        android:layout_marginTop="28dp"
        android:background="#B7BABA"
        android:ems="10"
        android:hint="  Phone Number"
        android:inputType="phone"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/postal" />


</androidx.constraintlayout.widget.ConstraintLayout>